--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "user_management_api",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A_simple_API_for_managing_users_",
   "license": "Unlicense",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "mocha --require @babel/register --recursive"
   },
